minor spacing fixes

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,7 +11,6 @@ body {
   position: relative;
   padding-top: 3.5rem;
   background-color: #eceeef;
-  // padding-bottom: 7.5rem;
 }
 
 .navbar-brand {
@@ -25,7 +24,7 @@ body {
 
 @media (min-width: 544px) {
   .jumbotron {
-    padding: 3rem 2rem;
+    padding: 2.5rem 2rem;
   }
 }
 
@@ -34,8 +33,8 @@ body {
 }
 
 h1 {
-  padding-top: 6.5rem;
-  margin-top: -6.5rem;
+  padding-top: 6rem;
+  margin-top: -6rem;
 }
 
 .text-white {
@@ -43,8 +42,7 @@ h1 {
 }
 
 .card-deck {
-  margin-top: 2.5rem;
-  // margin-bottom: 4rem;
+  margin-top: 2rem;
 }
 
 .card-block > img {
